--- a/form.html
+++ b/form.html
@@ -22,6 +22,7 @@
   <input type="tel" name="tel" id="te" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" placeholder="123-456-4569">
 </fieldset >
     <br><br>
+		<!--This is a dropdownlist in the form -->
   <label for="hello">Dropdown list:</label>
     <select size="3" id="hello"  >
     	<option>Hello1</option>
