--- a/form.html
+++ b/form.html
@@ -9,6 +9,8 @@
 </head>
 <body>
  <form autocomplete="on">
+
+	 <!--This is personal info person visiting websie-->
   <fieldset>
 		<legend>Personal Info</legend>
 
